--- a/InventtManage/Products.resx
+++ b/InventtManage/Products.resx
@@ -148,63 +148,45 @@
         AElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAABGdBTUEAALGPC/xhBQAADGRJREFUeF7t
-        W3lQlEcWN0nVHtmtVO1Ru/vHpjZVu1up2q1KbUoO0XhEZBBF5oARE8MNIhGUQ46Z+Wb4GMCDQwzKNQPM
-        DPehaDiG0yvmBHETjZVVQNzNobkAZUBjgLfdY0NwaGGQAeYj+VX9qlC6X7/3s/u97v7aZT/hJyx97OW9
-        8CuZwMZdKrA9LBfYvc8I7T6TCWyHZUJEga0B/1khsn0b/d6XdbF/hnT7CUg0O7nQrhKJNJS8bVXfYd/1
-        I3nBPCjctQmKd7sSbjb+OSfICfa/+tIQgwRVCOzYCLHDL4mZHx8YwfK/ItHa5CI7Q6bf+pGSPa5QFuFm
-        FnVhmyFl++phudC2WyZ68S/E5I8HjNB+FyO0vXPE3/F+afgWqkjmMCtwwyha2n2Mm83zxPTSBssue1LG
-        t8tJEK+4rUWziCbKbImXNZqJ37DCF/5Ahlm6QLNOley5sr9kz+PPOhozfNaOKkR2Z8kwSxOoekYpxUi8
-        OSzZR7F0jxso3O1GUDEaYD1WnGdF9h5isfgpMjT3gcT7l0Jo9y2upjQBLMMtoA3dhPMiJHmuvB8vsv+U
-        5b/4D+ICp/EESvQf5gY73acHPj/EQqLceE/u7vAi8YObkG2x4Su3OnxJC3K+mbuDB2ibdIfdsvxp4g73
-        IBPYdaiCeWO0ABeCaV5rAOVeDXGHW4gTrHgOHcv6SimBLRR1oZsBpZDvWPE/f0bc4g4kfJvgVK+1N2mB
-        WYqlqHjQ/n4y921bOYqOfq8Qt7gDdGYtRXlohBaUJYiPdOj8DPu3vwQ5O5yQmPR2h31fhsStDtXELe4A
-        VcErljpxmDI/ZCMkejpAU4YXfFITAYeDHCHNew3Q9pl5O50hwcPhP8Qt7oAR2PRbOv9he5l+6yHBcyX8
-        uywUhi4mGzl4IQkqFSJIRUXDdEzNrk2ATioDxC3uAC3h/smBzJX5r7sYl+vRECe4eZaZEG+chs4kUIe7
-        wJGADQ/104W54kJyl7jFHSAB+yYH8rhUhzjDId91kPTKKnhbHQSDSChT8cb5xRkZJGx1gOJJ12N4WcsE
-        tiPELe6AEdremiyEOcTB4rypCnaGN/zXQzISLdVvLZxXBUL/+wlU0UxZIuGjk4jjhE18VkbHSe4JKBPa
-        9kyeCQ8EcoVMf0fjUmTFK4wC4RmDTgwg5dvgpWb8XdbrPGg+/Br0NERTRZqOnaW7YB+yOz4mXsLI/iBx
-        iztAReS4OmTjxCkE3zonouRfrfSAT1sk1OAtQWwb/+OMj6tGVTje3b6HuMUdSPnLYzO81309Hki691oo
-        R5WSFrQl2f9eAprJthMCvoH2gQniFRXELe5Awl9ujxz/bDwQtJWA3sYYatCWJk4H4+Pi6y2Zm52YuMUd
-        GK/whTZf4aWLiwMOauADJTVgS3NcQJyDUS7GZ+FfE7e4BdbTvulogOMIPnbhoGjBzgfHBTwS4AhKzxXX
-        WJZ9krjEHajkTpE5cbxhXFUXS0AlqvBHozYYsqROSuIWd5An531z6UQoZAS9DCpUCRdaQFx99726Cj6q
-        CYU8htdH3OIOsqUbRrobo+Cc2h8OeK1ecAH3bXsJWjK9oLsxErJlTt8Tt7gDPAM/PhkGPU17IdV3zcIL
-        iFJHNxr745O7QSXn3SJucQdqxcaa0wU+Y9eb98JbaBYutIBn8/wAj3260HdUpdhYQtziDnIY3np1vPN3
-        eAnhQNCSpgY7H8Rj4TF7mqKgIH7j4FEJz564xS2gWdjenLt9dLEERCvge+RDG3GHe8iS8Z5FFXDglNpr
-        bKEFfEvrP6pWOH+ex677PXGHm8hmXn5epXDuzmWc4HZHIjVgS3KgXYm3LZCf4PKuWur4R+IGtwHLlj2B
-        ZkP/l+fl1KAtyVvnGZT3XPrJ0EsHBazLpS59FDVoS/KaPhK0yk1XyLBLB3nMhqRzWr/7tKAtyXNafyhg
-        N6aQYZcOsiWOq3XJrneGpvmmMWci27qkzXdzJE6ryLBLC2hL0Y2XGDV4C/BaQyQUJmzi3u2zuchmnP3K
-        UwQGQyddgLkQ26xIEd5VsS7+ZLilB3wvp4p37myvCB6hiTAXXqjaOYZy30Vc8clwSxNoP/h3tZxnsORS
-        xpcGaK9pyIpz/hsZZmkjh9mwLk/Og67GuW9rrjdHA9pjQrbcZS0xPyv4FUY+61UQGxSoldcGFkl7/DUS
-        g58mbhgT/xykk3UHamW13vnRgdvVMX8m3RYf+LiVH+8C75cFG59l0MSZlqjPxerXcdEwHt2IWbOAU4m3
-        OsYjUCe7EKCVGhR1GUPZ7+ig7NJxqOtqhPquJiNrrzVC2UfHIQv9Tl53yBCgkxoCtLIOn4Jo90X/TICD
-        xnd15Qf5UHaAb9wAm1tcbrTGQHWayNj3ypthsxLQVx23LkAjvRFVva9Pd7EKmnvboOXGKbOI2+o6qyCy
-        KrkPzc5en/zYNcTswgMHjW9MrqP8db7IH3SJrqBN3AzvFAc+8v3Lh8d3Qcl+N7TXc4W3iwKMfcdveojZ
-        R8JXw/4CzTZ1cJH8DhaBJtBsqO2shOAi5o6fRpqLbZNhFg4TAo4TidFZtRMqU4VwLN0deltijMsUC3fz
-        nAz0Wa9AdboItQmZEG6cMwnorZP8LkAj+VhWmz7U0N1CFeRxqO9pBunJ1CE0Gy8F5Ef8lgy3MJgiICG+
-        BD2r8YUytDxxjsQ5Dov6TvEPM86U0wmIA0MB9qSdzrtHE2GubL7RBqmncu8FaCVdr2bH/YYMa1mIxVVP
-        uckabPgy/V4R21IrUjRdxUFjsWiCzIbYRrbMCbBNbFvA6KMEcfXL8ZhhmWE/R/nuo7TTqnkRbzJTT+fd
-        RQXmoriKtdyDdjdp4wsCpilbwDTeFrOtg8GZnfdii7shvupTyErdDacLHny3mAvPaPwgK2WP0WZMURfs
-        ONJ51yOhdVDINA745KRcQRV2mBbwfJCpPTQUhHIiCf/xgWebUN50RihvHt6V8+F99tgXkNo48BDTq9pB
-        Fe8Kn9TtoQpjDq/Wh4MqwQ3Z6phiP66iHSX5BJhtzjMFrc2jiHPijiJm8DV19GoixezgwuqfETHN+SJF
-        syFKc3X0YEPflMAm80hWBpQcFEMP2lDTBJqOuE9ZqqfRxlTb/bCz6ICxUtICnY6moLWZjoUXKsZwzp31
-        PlEgq7MTyhtvomU6fKB+euEmqP8WstMioPLQNuM+kCYUjV2obVW6p7EvtmFqV1bzLuw9lkYNcCaagtZm
-        JoZXJd32KYjdSqSZGW6SRh+Uc4Ylpb1TgpmRDV9DdnoMaJIE0FERTBVsMtvLg6EwUQBZqA/uS7MZWvoG
-        aC5UUIObiaagtZmJhR0VgE85RJ7pwZc1xnmwrQZlzdQ8Zzb1/ZChqYZchSvo9gmhTeUFH5TvAPy25vLJ
-        UOP+8EyhD+j2iyBX7gqHNceMfWi2kut6IUgXD03XzT9hTKYpaG1mYlNvK/hrJcO+mrjniEx0CGRN4WK2
-        bSjpza+owcyWaQ1fQYauFnLQ0sxVeqDtCc9I/HNOegRkFNUa29D6jjPuWCuwDUepgZlDU9DamENFQ4bB
-        Rx0bQqSaCjdpgxMqFkNJJy0jnqUYXlEIue8VU4Myh6agtTGHOe8VoWUsrSFyPYxN0Q1/QtuUb+WV/6MG
-        sZgMKT4IlZdPUIMyh6agtTGHFZdOQJBW1k0kexhof9e8W3X5O1oAi80Ajdx4FUULCtPSoI2Bia/F/Aol
-        U/97BV66Hgltd1L0Zm5VFpi+BXHGJE4LCtPSoI2B2dTbBt4FsabvEuEJkaLlqqT0OtV5a6CPtQh4vXWq
-        gFsk+rVbladu0xy3Flr1EnZXtNRGaq6O0Ry3FoYUpxgTOC0oc2gKWhtzWH6pBheRa0Q6NPvYuqf5TOPd
-        A3VTj07WRKvdxuDi8dqBt/ppTlsTJcfOgKL+CDUoc2gKWhtzyNSmD3rnR//wkV/I6A+E5V0eoTltTUyu
-        /69VHOUCtdKhhz6DitiWs5Kyx7gsWASGlmRawWWCtINI9wDo2Pa5suYW1WFrI3OiHcIrD1KDm4mmoLWZ
-        ibvLlbe98mO3EOkegM/oh8y+51t0WuGFKl+qv48KCXCFImUZ7EC5kFNX+tYGv8K4PHn9oQFasPNB2Zvp
-        A2j2HSXDcx+c/6xpDVgSH9YXG0vyacdCY8k9LlosjD9vi6hMGshvL5v26suU+I4vv70U7TETcbFY3Odt
-        i4mHHlhqpEOmDyxbepFgiKYPLPHxzGoeWFoLaE98vfNjxjDxz3N74rts2f8BGzYGnGicPDoAAAAASUVO
-        RK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAABQCAYAAACOEfKtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAhASURBVHhe7ZxrbBxXFccdHh8oUPiEqNQiUYQQEiAkKtFKIFW0IPgAH5AihFp7N/uY8UNRk2Dv
+        zmM3XQcndrzxzuw6dmzvzr78SGM7ftWO13USksptSaOE1m1Dm9CWViJKBA24dhzjdX25Z3wmD2fcZhvv
+        7Cyen3Rk7ZnZnXP+unNfZ8YlFutEWbv3G46EmHHE+VmHIhB3S4C4/UHC8BLYDLW33YI0xAhSVWWg5Uv4
+        NQtgS3zHA84kfyXyvLI08OYoAZNPKsQRE6mI+zQRb5gg/ZPhJBd+3cKVEjLhk7Hsc38/Rm426UQ060qJ
+        Y1sDkXsrxaYH3LzspgKe1oR081IPw7R/Hn9m42KPc9eG3zpyi3hgQ2+NEVvcO4+nXYflpN9TAeG2JgwX
+        6kT3xsWuUAHPj98mIIiqJyDA8tIjVMA5EJHl5N+he2PiTIoTks4tHKK3sDMhjuNpt8FyoXK1FfLShc2b
+        ez+L7o3Hk4rnO44EPyOfUJaevTBOwEInYlnw2RM138bTbgNEo4PJeRCRjtC/QvfGRJvGQH8ItzQMLLb2
+        mm/h4TWhI3JgpRWGwuiyyAVWkH+Ot/GL6LLIhfLq4NdQwNlAIPAZdFvkAhXvMohYwUkPossiF+iU5hgI
+        SCfav0GXRS7QibUMArp2NXbbO2p+6FA8X8ZDFncCrItBQLZ+70dsp/9Dm+JZ2pLgPnSmxTccSWGgTPHs
+        Kot5bGWK9ydPtgv34dcsNFxi08MgYNXu8LI2CR+9kCHPTA+S6KluuqaOkV3j4YUdfXv+zaR9M7aYZ4nO
+        MS+5kuIpe4JLUHG9pbGazbYo96Mnurbeiz+7cYDtLSrgMiOESOado7esZvQs884kGfjrKEmd7SWtU0lS
+        P9l6jR9qvFLVE7hii3HZLXHuqjMpnIeNDCpugy3qYcri1Y874tyDJaRkE172/wsq4HvQCvvOjOmKlovB
+        GlwTt2GyNSsM75ur6qn9DxV2oSzmhRXSRWdCmKJdQsfNrXdz7/YvYDjFB+0HR0DAtolDuqKsl63qGpae
+        PhKe2d67+wPoGmhfu+xIcFewa1BuFpdp934FQzUnDC/vBgHrOhXdxI2wj+sa7Ip30R73ztFB7ZxD4QdX
+        dw0FXwTgHiGplvbrJmcG01pv20vpW8Rd3TWUKp72W1tv4B5MM3+UC+HvgYAVtfL1kbho7N2VzePOv/ST
+        1hfTpHGybUkcbprd2lM744jzC7SvzTqT/HuOJH/cFvPuxZTXF9jaZ3l5EUbiIxcm9QMtUoOWe3B6gOye
+        2E/YTt8ZTHn9cQuhc9AKD54a0Q2k2C0wJmfp4FSD6a4/apGJChge6dENoNjNnfJdsye838d01x+GDwkg
+        4M5Yh24AxWx9b4wQ2gfO5HUiD7sxIOC2YLNuEMVszc/HCZP2j2Cq+cHla/4mCMj6cx+J6bRB169Zvo9/
+        knkHG+dLY55STDVfkE2MIF0FEUfOZXQDWcvMLGDm3aOEzhUX7Ymar2Oi+YOK9zIImJ4a0g1mLTOzgF2v
+        9BNnUnwfU8wvtAVGQcB9/WndYNYyMwsYPNa+7EoKrZhifqFzwadAQOHAAd1g1jIzC/jUM3Vz9ljNLzHF
+        /MIK4cdAwK31sm4wa5lZBYRViD3uXTRkPQxcL3OKIXWNqReUnplVwNipHjp98Z3F9IzBLUgfgIgD07c/
+        sLSWmVXAXeORRVucEzE1Y6BLOrXMGTverxuUnplVQDbtm4ctLUzNGLQy557uuG5QemZGAQ+fe5bAI8+G
+        b7ZqZU5PpEU3MD0zo4D7p5KE6fQfwbSMg+HlH4OAlXV3vqQzo4DcYHC+VPE4MS3juFHmlEjm7U8uc4KZ
+        TUAoz25J8P99Iuq5H9MyFoYPvQ+tsO/MqG6Aq81sAna/epjQ1cdFTMd4qHjDIGDL+EHdAFeb2QRsOt6x
+        7EwJUUzHeLQyZ20qqhvgajObgNsO1c3aFE/hnjbTypw7QsW3uTr2twligzJnIZ8y08qc5bVS0ZU546cP
+        EndSnMZUCsNKmVPKQplz9PxzuoGa1eoyzXT55q3FVAoHXROrZc7uPxdXmbOiyz9XplQ/gmkUDq3MKQ91
+        6QZqRoMnFOBVj0cDgc9hGoVDK3P6o226wZrR6idaltwpMY0pFBZWDP0aBNzWGNEN1kwG7wruPXrgI1dK
+        vGxI8ehO0MqcjNikzsPMbM4kP8d2+ftM9gw32UQFXHktVpCsh8s/DSwnv6QKyIV+gS6LXNDKnHQ++Ad0
+        WeSCVuakS7sEuixywcVJP1NbIC+dRpdFLtz0NudV623OTwkVT32bk/WF13z73eJjoCuSo6qAvPRbdFnk
+        glbmdPPyTnRZ5AL+wx6YTPeiyyIXXIL8A1VAXvoHuixyQ13SXQQRYVqDTotcYDjJDwLC0o5OZwq/11Zs
+        2APSV6mAaq0YBhV0W+SCiw/9lAq4ACK6OSkF/xUOD1ncKbjJOg8iUvuXW5AaqO+h7dtDxfuytNG4PNJ3
+        3bw0hSKazjBM80Nv48dpwG3UXqe2qCVQaMPwioPS6uAXK3zh1/hgcjYxNEUOTZ4l8NcbTCxUiJHX4Die
+        elcYdR3DoUnt4YKpucETr5OhkzcMPnsbE3PlvnAdnnpXGHUdw6nwN19OjbygJtPQMUCqdjaThuig+jk5
+        /AKp9EUu4al3hVHXMRyWl5f6j72iJlLhi6h9UKW/Wf0MflaQs3jqXWHUdQxndcsoF8OGtMB8Xcdwyv3h
+        ej6Yupbvvsmo6xjOyugYUUdHaAmH//QqSYxMEW5vcrbcF5le31E4/9cpCEyg/R5oAVX+5ksMLy/DXzq1
+        +CP48ZR1wajrWFhYFAklJf8D5RISCUlryR0AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
